bug fix where mobile image overlaps bottom of site

--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@
 }
 
 .displayContainerImagesPhone {
-  height: 45vw;
+  height: 40vw;
   width: 60%;
 }
 
